Fix ordered list on mobile

--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -54,6 +54,10 @@
         width: 100%;
       }
 
+      ol {
+        list-style-position: inside;
+      }
+
       .image-column {
         align-items: center;
         display: flex;
